--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,9 @@
     "@shadcn/ui": "^0.0.4",
     "@types/aframe": "^1.2.8",
     "aframe": "^1.7.1",
+    "aframe-environment-component": "^1.5.0",
+    "aframe-inspector": "^1.7.0",
+    "aframe-watcher": "^1.4.0",
     "autoprefixer": "^10.4.17",
     "next": "14.1.0",
     "postcss": "^8.4.35",
